# project-mri

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD.md  Dockerfile  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  about.html  architecture.html  comparison.html  docs.html  features.html  index.html  install.html  manifesto.html  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  roadmap.html  self-host.html  sitemap.xml  tsconfig.dashboard.json  tsconfig.json  wrangler.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/action/: action.yml
.github/workflows/: ci.yml  release-container.yml
apps/dashboard/: next.config.ts  package.json
apps/dashboard/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/dashboard/lib/: api-types.ts  api.ts
apps/dashboard/scripts/: embed.mjs
apps/web/: .gitignore  next.config.ts  package.json  tsconfig.json  wrangler.toml
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/about/: page.tsx
apps/web/app/architecture/: page.tsx
apps/web/app/changelog/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/comparison/: page.tsx
apps/web/app/contributing/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/features/: page.tsx
apps/web/app/how-it-works/: page.tsx
apps/web/app/install/: page.tsx
apps/web/app/manifesto/: page.tsx
apps/web/app/roadmap/: page.tsx
apps/web/app/self-host/: page.tsx
apps/web/components/: crt.tsx  footer.tsx  grid-field.tsx  icons.tsx  json-ld.tsx  link.tsx  logo.tsx  nav.tsx  page-header.tsx  scan-field.tsx  site-footer.tsx  theme-toggle.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  code-panel.tsx  container.tsx  doc.tsx  page-header.tsx  terminal-window.tsx  watermark.tsx
apps/web/components/viz/: authorship-split-bar.tsx  decision-consequence-strip.tsx  risk-ring.tsx  session-trace-card.tsx
apps/web/lib/: cn.ts  site.ts  use-callback-ref.ts
apps/web/tools/: gen-headers.mjs
apps/web/worker/: csp.mjs  index.mjs
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/mri/: cli.py  logging_setup.py  metrics.py  security.py
backend/mri/analyzers/: architecture.py  complexity.py  coupling.py  dependencies.py  git_history.py  tech_debt.py
backend/mri/api/: app.py  deps.py  middleware.py
backend/mri/api/routes/: demo.py  scans.py
backend/mri/auth/: __init__.py  routes.py
backend/mri/db/: repository.py  schema.sql
backend/mri/models/: scan.py
backend/mri/services/: repo_cloner.py  scanner.py  watcher.py  webhook.py
backend/mri/templates/: report.html.j2
backend/tests/: test_analyzers.py  test_dashboard_e2e.py  test_failure_modes.py  test_fixes.py  test_v030.py
ci/: gitlab-ci.yml
css/: base.css  components.css  demos.css  tokens.css
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/ts/: dashboard.ts
data/: demo-clean.json  demo-legacy.json
demo/: index.html
deploy/: docker-compose.yml
docs/: API.md  AUDIT.md  CONFIG.md  INSTALL.md  METHODOLOGY.md  PACKAGING.md  QUALITY-BARS.md  ROADMAP-FULL-PRODUCTION.md  TRUST.md  backend-dev.md
docs/adr/: ADR-001-stack.md  ADR-002-license-mit-forever.md  ADR-003-product-shape-local-first.md  ADR-004-repo-structure-workflow-stack.md  ADR-005-schema-migrations.md  ADR-006-oss-adoption.md  ADR-007-duckdb-deferred.md  ADR-008-authorship-line-shares-deferred.md  ADR-009-cursor-aider-ingest-deferred.md  ADR-010-git-notes-provenance-deferred.md  ADR-011-base-risk-composition.md  ADR-012-session-reasoning-mining-deferred.md  ADR-013-auth-posture-fail-closed-local-first.md  ADR-014-mcp-stdio-transport.md  README.md
examples/sample-report/: mri-report.html
scripts/: install.sh
src/mri/: __init__.py  cli.py  config.py  logging_setup.py  mcp_server.py  timeparse.py
src/mri/analyzers/: architecture.py  base.py  complexity.py  coupling.py  dependencies.py  git_history.py  parsing.py  tech_debt.py
src/mri/api/: app.py  metrics_routes.py  middleware.py
src/mri/api/routes/: fusion.py  health.py  scans.py
src/mri/auth/: routes.py  users.py
src/mri/db/: fusion_repository.py  migrator.py  repository.py
src/mri/db/migrations/: 0001_initial_schema.sql  (+8 more)
src/mri/eval/: __init__.py  corpus.py  guard.py  runner.py
src/mri/fusion/: __init__.py  authorship.py  consequences.py  correlation.py  decisions.py  explain.py  line_authorship.py  pipeline.py
src/mri/ingest/: __init__.py  claude_code.py  service.py
src/mri/models/: cli_json.py  fusion.py  scan.py
src/mri/scoring/: __init__.py
src/mri/services/: demo_feed.py  repo_cloner.py  report_generator.py  scanner.py  watcher.py  webhook.py
src/mri/templates/: report.html.j2
src/mri/utils/: __init__.py
tests/: test_analyzers.py  test_api.py  test_api_fusion.py  test_authorship_weighted_risk.py  test_bind_posture.py  test_cli_fusion.py  test_cli_scan.py  test_clone_branch.py  test_clone_quota.py  test_clone_ssrf.py  test_consequence_loop.py  test_dashboard_e2e.py  test_decision_dedupe.py  test_decision_provenance.py  test_eval_harness.py  test_explain.py  test_failure_modes.py  test_fixes.py  test_fusion_model.py  test_fusion_pipeline.py  test_golden.py  test_line_authorship.py  test_mcp_server.py  test_migrations.py  test_no_network.py  test_parsing.py  test_phase1_regressions.py  test_pipeline.py  test_report_endpoints_fusion.py  test_report_fusion.py  test_sarif_authorship.py  test_scoring.py  test_security.py  test_session_commit_correlation.py  test_session_ingest.py  test_site_e2e.py  test_symlink_containment.py  test_v030.py  test_watch_cli.py
tests/golden/: README.md  __init__.py  baseline_report.json
tools/: assemble-site.mjs  serve-site.py
ts/: chrome.ts  demos.ts  index.ts  live.ts  terminal.ts
(+7 files in other folders)
