[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mri"
version = "0.3.0"
description = "MRI scan for your codebase — local-first codebase intelligence tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "project-mri contributors" }]
keywords = ["code-analysis", "code-quality", "developer-tools", "git-history", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Hard deps (runtime)
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "aiosqlite>=0.19",
    "gitpython>=3.1",
    "click>=8.1",
    "httpx>=0.27",
    "tree-sitter<0.21",  # pinned: 0.21+ breaks tree_sitter_languages API
    "tree-sitter-languages>=1.10",
    "jinja2>=3.1",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "watchdog>=4.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
mri = "mri.cli:cli"
mri-server = "mri.cli:cli"

[project.urls]
Homepage = "https://github.com/veter391/project-mri"
Documentation = "https://github.com/veter391/project-mri/blob/main/README.md"
Repository = "https://github.com/veter391/project-mri.git"
Issues = "https://github.com/veter391/project-mri/issues"
Changelog = "https://github.com/veter391/project-mri/blob/main/CHANGELOG.md"

# --- src-layout: the importable package lives under src/mri ---
[tool.setuptools.packages.find]
where = ["src"]
include = ["mri*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# The self-hosted dashboard is a static Next export (apps/dashboard,
# `output: 'export'`) copied into src/mri/_frontend/dashboard at build time.
# It is gitignored but lives inside the `mri` package, so this recursive glob
# ships it in the wheel. `mri serve` then serves it with no Node runtime.
mri = ["db/*.sql", "templates/*.html", "templates/*.j2", "_frontend/**/*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "S101",  # Use of assert detected (we use assert in tests)
    "S104",  # Possible binding to all interfaces (dev only)
    "S105",  # Possible hardcoded password (we have env-based config)
    "S107",  # Hardcoded password (same)
    "E501",  # Line too long (we use ruff format too)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"*/migrations/*" = ["B008"]
# These are intentional defensive patterns used across the codebase
"src/mri/api/routes/*.py" = ["B008", "S110"]  # FastAPI Depends() in defaults; webhook/swallow is non-fatal
"src/mri/auth/routes.py" = ["B008"]  # FastAPI Depends() in defaults
"src/mri/services/*.py" = ["B007"]  # unused loop vars in (src, dst) iterations
"src/mri/services/repo_cloner.py" = ["S603"]  # subprocess with validated fixed args
"src/mri/services/demo_feed.py" = ["S311"]  # deterministic seeding for demo, not crypto
"src/mri/cli.py" = ["S202", "ASYNC240"]  # tarfile validated above; Path methods in async CLI helpers
"src/mri/services/scanner.py" = ["ASYNC240", "S110"]  # Path methods in async scan; intentional try/except
"src/mri/analyzers/*.py" = ["S110", "S112"]  # intentional try/except pass/continue for parse robustness
"src/mri/analyzers/coupling.py" = ["B007"]  # (src, dst) iteration pattern
"src/mri/security.py" = ["B904"]  # raise-from is not needed in low-level security catch
"src/mri/api/routes/demo.py" = ["B904"]  # demo endpoints, raise-from not needed

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
